--- a/jordan-normal-form/sources/master.ltx
+++ b/jordan-normal-form/sources/master.ltx
@@ -199,7 +199,7 @@
 
   \begin{thebibliography}{99}
     \bibitem{bib:a} ``広義固有ベクトル - Wikipedia''，\url{https://ja.wikipedia.org/wiki/広義固有ベクトル}，参照May.16,2020．
-    \bibitem{bib:b} ``Generalized eigenvector - Wikipedia''，\url{https://en.wikipedia.org/wiki/Generalized_eigenvector#Jordan_chains}，参照May.16,2020．
+    \bibitem{bib:b} ``Generalized eigenvector - Wikipedia''，\url{https://en.wikipedia.org/wiki/Generalized_eigenvector}，参照May.16,2020．
     \bibitem{bib:c} ``行列式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/行列式}，参照May.17,2020．
     \bibitem{bib:d} ``固有多項式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/固有多項式}，参照May.17,2020．
     \bibitem{bib:e} ``Jordan normal form - Wikipedia''，\url{https://en.wikipedia.org/wiki/Jordan_normal_form}，参照May.17,2020．
