write about stationary

--- a/simulated-annealing/sources/master.ltx
+++ b/simulated-annealing/sources/master.ltx
@@ -90,14 +90,30 @@
 
   \section{漸近的収束性(asymptotic convergence)}
     シミュレーテッド・アニーリングの解の系列を確率過程としてのマルコフ連鎖としてとらえ、最適解への確率的収束性を示すことが実際に行われた。
-    温度を一定として反復を繰り返す過程は、推移確率が変化しない斉次(homogeneous)なマルコフ連鎖とみることができる。
-    このモデル化のもとで、ある仮定を与えることで、反復を繰り返すと平衡状態へと達することが示される。
-    その平衡状態において各状態(解)$i \in X$の確率$\omega_i(T)$は
+    温度を一定、状態$i$から$j$が選択される確率を一定とし、状態$i$から$j$へ遷移する確率を
     \begin{equation}
-      \omega_i(T) = \frac{\exp{\left( -\frac{f(i)}{T} \right)}}{\sum_{j \in X} \exp{\left( -\frac{f(j)}{T} \right)}}
+      p_{ij} = \begin{cases}
+        1 - \sum_{j \neq i} p_{ij}, & i = j \\
+        \frac{1}{n-1}, & i \neq j, \; f(j) \le f(i) \\
+        \frac{1}{n-1} \exp\left( -\frac{f(j) - f(i)}{T} \right), & i \neq j, \; f(j) > f(i)
+      \end{cases}
     \end{equation}
-    として表わされる。
-    この確率分布はボルツマン分布といわれる。
+    とすれば、$p_{ij}$を各成分として遷移行列$P$を成す。
+    遷移行列は左固有ベクトルとして全ての成分が$1$のベクトルを持つことは自明であり、対応する固有値は$1$となる。
+    行列の左固有値と右固有値が一致することから右固有値$1$を持つため定常分布が存在し、その定常分布は
+    \begin{equation}
+      \pi_i = \frac{\exp\left( -\frac{f(i)}{T} \right)}{\sum_j \exp\left( -\frac{f(j)}{T} \right)}
+    \end{equation}
+    となり、
+    \begin{equation}
+      \pi_j = \sum_i \pi_i pi_{ij}
+    \end{equation}
+    が成立する。
+    この分布はボルツマン分布という。
+
+    またゲルシュゴリンの定理より$P$のスペクトル半径は$1$以下であることが示され、同時に固有値$1$の固有空間は$1$次元となることも示されるため、$\lim_{k \to \infty} P^k$は各行がボルツマン分布の行列へと収束する。
+    したがって、温度を一定として反復を繰り返す過程は、推移確率が変化しない斉次(homogeneous)なマルコフ連鎖とみることができる。
+    このモデル化のもとで、反復を繰り返すと平衡状態へと達することが示される。
 
     また、上述のボルツマン分布において$T$を序々に$0$へと近づけることで各状態の確率はある一定の値に収束する。
     最適解の集合を$X_{opt}$としたとき、最適解$i_{opt} \in X_{opt}$に対しては
