--- a/tabu-search/sources/master.ltx
+++ b/tabu-search/sources/master.ltx
@@ -21,6 +21,8 @@
 
   \section{概要(abstract)}
     %TODO: メタヒューリスティクス p.144
+    制約が複雑だと実行可能領域の狭い範囲でしか探索が行えなくなることが多い。
+    戦略的振動で制約を緩め、さらに記憶を用いることで複雑な制約に対しても広い範囲で探索を行うことが可能となる。
 
   \section{タブーサーチ(tabu search)}
     %TODO: メタヒューリスティクス p.145
