write about principal ideal

--- a/chinese-remainder-theorem/sources/master.ltx
+++ b/chinese-remainder-theorem/sources/master.ltx
@@ -27,6 +27,16 @@
     \end{description}
   \end{dfn}
 
+  \begin{corollary}[単項イデアル]
+    可換環$R$のある元$m \in R$によって書かれる集合$I$
+    \begin{equation}
+      I = \Set{ a m | a \in R }
+    \end{equation}
+    はイデアルとなる。
+    この$I$を$m$を生成元とする単項イデアルという。
+    また、$m$を生成元とする単項イデアルを$mR$と書くこともある。
+  \end{corollary}
+
   \begin{dfn}[剰余類]
     可換環$R$上のイデアル$I$と任意の$x \in R$に対して
     \begin{equation}
