--- a/chinese-remainder-theorem/sources/master.ltx
+++ b/chinese-remainder-theorem/sources/master.ltx
@@ -10,6 +10,11 @@
 \author{}
 \date{}
 
+% gcd
+%\DeclareMathOperator{\gcd}{gcd}
+% lcm (gcd is already declared)
+\DeclareMathOperator{\lcm}{lcm}
+
 % -----------------------------------------------------------------------
 % 本文
 % -----------------------------------------------------------------------
@@ -43,6 +48,7 @@
       x + I = \Set{ x + a | a \in I }
     \end{equation}
     を$x$を代表元とする剰余類という。
+    また$x$を代表元とする剰余類を$\overline{x}$とも書く。
   \end{definition}
 
   \begin{theorem}
@@ -86,10 +92,57 @@
     hoge
   \end{theorem}
 
+  \begin{theorem}
+    ある剰余環$R/mR$と$R/nR$の元からなる組の集合
+    \begin{equation}
+      \Set{ (a + mR, b + nR) | a, b \in R }
+    \end{equation}
+    は以下に定める加法と乗法に対して環となる。
+    \begin{description}
+      \descitem{加法}{} 任意の$a, b, a', b' \in R$に対して$(a + mR, b + nR) + (a' + mR, b' + nR) = ((a + a') + mR, (b + b') + nR)$
+      \descitem{乗法}{} 任意の$a, b, a', b' \in R$に対して$(a + mR, b + nR) \times (a' + mR, b' + nR) = ((a \times a') + mR, (b \times b') + nR)$
+    \end{description}
+  \end{theorem}
+  \begin{proof}
+  \end{proof}
 
   \begin{theorem}[中国剰余定理(Chinese Remainder Theorem)]
-    ある剰余環$Z/mZ$に
+    ある整数$m, n$に対して最小公倍数と最大公約数をそれぞれ
+    \begin{equation}
+      l = \lcm(m, n), \quad g = \gcd(m, n)
+    \end{equation}
+    とする。
+    このとき剰余環$\Z/l\Z$と$\Set{ ((ga + r) + m\Z, (gb + r) + n\Z) | a, b, c \in \Z, 0 \le r < g }$は環同型となる。
   \end{theorem}
+  \begin{proof}
+    $(gx + r) + l\Z \in \Z/l\Z$に対してある$\func{\phi}{(gx + r) + l\Z}$を
+    \begin{equation}
+      \func{\phi}{(gx + r) + l\Z} = ((gx + r) + m\Z, (gx + r) + n\Z)
+    \end{equation}
+    とすると$\phi$は$\Z/l\Z$を始域、$\Set{ ((ga + r) + m\Z, (gb + r) + n\Z) | a, b, c \in \Z, 0 \le r < g }$を終域とする同型写像となることを示す。
+
+    まず、$\phi$が写像となることを示す。
+    任意の$x \in \Z, 0 \le r < \Z, y \in (gx + r) + l\Z$に対して、ある$a \in \Z$が存在し
+    \begin{equation}
+      y = gx + r + la
+    \end{equation}
+    が成立する。
+    前提より、$l = \frac{mn}{g}, g | m, g | n$であるため
+    \begin{equation}
+      y = gx + r + \frac{mn}{g} a = gx + r + m \left( \frac{n}{g}a \right) = gx + r + n \left( \frac{m}{g}a \right)
+    \end{equation}
+    となる。
+    したがって、任意の$x, r$に対して
+    \begin{equation}
+      (gx + r) + l\Z \subset (gx + r) + m\Z, \quad (gx + r) + l\Z \subset (gx + r) + n\Z
+    \end{equation}
+    となる。
+    よって$\phi$は
+    \begin{equation}
+      y = gx + r + \frac{mn}{g} a = gx + r + m \left( \frac{n}{g}a \right) = gx + r + n \left( \frac{m}{g}a \right)
+    \end{equation}
+    したがって
+  \end{proof}
 
 
 \end{document}
