--- a/reed-solomon-coding/sources/master.ltx
+++ b/reed-solomon-coding/sources/master.ltx
@@ -210,4 +210,11 @@
     が成立する。
     また、この符号語全体の集合$W$を符号という。
 
+
+
+  \begin{thebibliography}{99}
+    \bibitem{bib:a} ``3章 リード・ソロモン符号とその復号法 - J-Stage''，\url{https://www.jstage.jst.go.jp/article/itej/70/7/70_571/_pdf}，参照Mar.9,2020．
+    %\bibitem{bib:z} ``''，\url{}，参照May.17,2020.
+  \end{thebibliography}
 \end{document}
+
