--- a/gaussian-process-regression/sources/master.ltx
+++ b/gaussian-process-regression/sources/master.ltx
@@ -19,6 +19,10 @@
   \maketitle
   \tableofcontents
 
+  \section{概要}
+    ガウス過程回帰はカーネルを用いて未知の関数の回帰を行う手法の一つである。
+    得られる出力がガウス過程にもとづいているという前提のもとで、関数を推定する。
+    また、回帰によって得られるのは入力に対する出力ではなく、入力に対しての出力の確率分布である。
 
 
 
