--- a/reed-solomon-coding/sources/master.ltx
+++ b/reed-solomon-coding/sources/master.ltx
@@ -153,7 +153,7 @@
         の解を一つ得ることができれば他の解も得ることができる。
 
   \section{概要}
-    $F_q$を位数$q$のガロア体として$\vect{m}, \vect{w}, \vect{y}$をそれぞれ
+    $F_q$を位数$q$のガロア体として行ベクトル$\vect{m}, \vect{w}, \vect{y}$をそれぞれ
     \begin{gather}
       \vect{m} = ( m_0, \cdots, m_{k-1} ) \\
       \vect{w} = ( w_0, \cdots, w_{n-1} ) \\
