--- a/gaussian-process-regression/sources/master.ltx
+++ b/gaussian-process-regression/sources/master.ltx
@@ -28,6 +28,7 @@
 
   \begin{thebibliography}{99}
     \bibitem{bib:a} ``ガウス過程回帰の導出 ( GPR : Gaussian Process Regression )''，\url{https://www.slideshare.net/KenjiUrai/explanation-of-gpr}，参照May.31,2020．
+    \bibitem{bib:b} ``Gaussian process - Wikipedia''，\url{https://en.wikipedia.org/wiki/Gaussian_process#Definition}，参照May.31,2020．
     %\bibitem{bib:z} ``''，\url{}，参照May.17,2020.
   \end{thebibliography}
 \end{document}
