--- a/bayesian-optimization/sources/master.ltx
+++ b/bayesian-optimization/sources/master.ltx
@@ -23,6 +23,7 @@
 
   \begin{thebibliography}{99}
     \bibitem{bib:a} ``Bayesian optimization - Wikipedia''，\url{https://en.wikipedia.org/wiki/Bayesian_optimization}，参照May.31,2020．
+    \bibitem{bib:b} Jasper Snoek, Hugo Larochelle, and Ryan P. Adams (2012) : Practical Bayesian Optimization of Machine Learning Algorithms. arXiv:1206.2944 [cs] (June 2012)%TODO: 形式
     %\bibitem{bib:z} ``''，\url{}，参照May.17,2020.
   \end{thebibliography}
 \end{document}
