--- a/geometry/sources/master.ltx
+++ b/geometry/sources/master.ltx
@@ -100,7 +100,7 @@
       %TODO: 線形変換の定義
     \end{definition}
 
-    \begin{definition}[不動点]
+    \begin{definition}[不動点(fixed point)]
       ある点$\vect{x}$と線形変換$f$に対して
       \begin{equation}
         \vect{x} = \func{f}{\vect{x}}
