--- a/fisher-yates-shuffle/sources/master.ltx
+++ b/fisher-yates-shuffle/sources/master.ltx
@@ -19,6 +19,11 @@
   \maketitle
   \tableofcontents
 
+  \section{概要}
+    このアルゴリズムは1938年にフィッシャーとイェーツによって示されたものが元となっている。
+    また計算機用に改良されたアルゴリズムがリチャード・ダステンフェルド、ドナルド・クヌースらが別々に示した。%TODO: ちゃんと調べろ
+
+
 
   \begin{thebibliography}{99}
     %TODO: 参照の日付かえろ
