--- a/fisher-yates-shuffle/sources/master.ltx
+++ b/fisher-yates-shuffle/sources/master.ltx
@@ -19,9 +19,28 @@
   \maketitle
   \tableofcontents
 
+
   \section{概要}
     このアルゴリズムは1938年にフィッシャーとイェーツによって示されたものが元となっている。
     また計算機用に改良されたアルゴリズムがリチャード・ダステンフェルド、ドナルド・クヌースらが別々に示した。%TODO: ちゃんと調べろ
+
+
+  \section{改良されたアルゴリズム}
+    \subsection{アルゴリズム}
+
+    \subsection{正当性}
+
+
+  \section{取り出しのアルゴリズム}
+    \subsection{アルゴリズム}
+
+    \subsection{正当性}
+
+
+  \section{サットロのアルゴリズム}
+    \subsection{アルゴリズム}
+
+    \subsection{正当性}
 
 
 
