--- a/memetic-algorithm/sources/master.ltx
+++ b/memetic-algorithm/sources/master.ltx
@@ -32,5 +32,11 @@
   GA, ACO や PSO はパラメータを決めるときにたまに便利なのよ
 
 
+  \begin{thebibliography}{99}
+    %\bibitem{bib:a} 吉冨康成，``ニューラルネットワーク''，朝倉書店，pp.88-96，(2002)．
+    %\bibitem{bib:b} 相吉英太郎他，安田恵一郎，``メタヒューリスティクスと応用''，電気学会，pp.1-15，()．%TODO: 年は?
+    %\bibitem{bib:c} 斎藤康毅，``ゼロから作るDeep Learning''，オライリージャパン，pp.165-177，(2016)．
+    \bibitem{bib:b} 相吉英太郎他，安田恵一郎，``メタヒューリスティクスと応用''，電気学会．%TODO: ページと年
+  \end{thebibliography}
 \end{document}
 
