--- a/lyapunov-stability-theory/sources/master.ltx
+++ b/lyapunov-stability-theory/sources/master.ltx
@@ -114,12 +114,11 @@
       前提より$\sum_{n=-\infty}^{\infty} \abs{h[n]}$は有界であるため、$\norm{x}_{\infty}$が有界であれば$\abs{y[m]}$も有界となることが示された。
     \end{proof}
 
-  %\begin{thebibliography}{99}
-  %  \bibtem{bib:d} \url{http://www.gifu-nct.ac.jp/elcon/labo/endo-n/endo/lecture/syscon/node24.html}
-  %  \bibtem{bib:d} \url{https://en.wikipedia.org/wiki/Lyapunov_stability}
-  %  \bibtem{bib:d} \url{https://en.wikipedia.org/wiki/BIBO_stability}
-  %  \bibtem{bib:d} \url{http://www.ic.is.tohoku.ac.jp/~swk/lecture/yaruodsp/dfbasic.html}
-  %\end{thebibliography}
-
+  \begin{thebibliography}{99}
+    \bibitem{bib:d} ``''，\url{http://www.gifu-nct.ac.jp/elcon/labo/endo-n/endo/lecture/syscon/node24.html}，参照May.17,2020．%TODO: 参照の日付
+    \bibitem{bib:d} ``''，\url{https://en.wikipedia.org/wiki/Lyapunov_stability}，参照May.17,2020．%TODO: 参照の日付
+    \bibitem{bib:d} ``''，\url{https://en.wikipedia.org/wiki/BIBO_stability}，参照May.17,2020．%TODO: 参照の日付
+    \bibitem{bib:d} ``''，\url{http://www.ic.is.tohoku.ac.jp/~swk/lecture/yaruodsp/dfbasic.html}，参照May.17,2020．%TODO: 参照の日付
+  \end{thebibliography}
 \end{document}
 
