--- a/riemann-integral/sources/master.ltx
+++ b/riemann-integral/sources/master.ltx
@@ -47,10 +47,8 @@
   \end{definition}
 
   \begin{thebibliography}{99}
-    %TODO:\bibtem{bib:d} \url{https://www.ms.u-tokyo.ac.jp/~aida/lecture/20/10-7.pdf}
-    %TODO:\bibtem{bib:d} \url{https://en.wikipedia.org/wiki/Darboux_integral}
+    \bibitem{bib:d} ``''，\url{https://www.ms.u-tokyo.ac.jp/~aida/lecture/20/10-7.pdf}，参照May.17,2020．%TODO: 参照の日付
+    \bibitem{bib:d} ``''，\url{https://en.wikipedia.org/wiki/Darboux_integral}，参照May.17,2020．%TODO: 参照の日付
   \end{thebibliography}
-
-
 \end{document}
 
