--- a/todo/sources/master.ltx
+++ b/todo/sources/master.ltx
@@ -5,6 +5,7 @@
 %------------------------------------------------------------------------
 \usepackage{./preambles/ownpack}
 
+\usepackage[pdf, singlefile]{graphviz}
 
 \title{todo}
 \author{}
@@ -18,6 +19,8 @@
 
   %\maketitle
   %\tableofcontents
+
+  \digraph[scale=0.7]{dig01}{a->b->c; b->d; }
 
 
 
